sample: implement monitors (#5)

--- a/provision/generators/README.yaml
+++ b/provision/generators/README.yaml
@@ -45,6 +45,12 @@ usage: |-
     module "main" {
       source = "hadenlabs/monitor/uptimerobot"
       version   = "0.0.0"
+      monitors = [
+        {
+          friendly_name = "test-url"
+          url           = "https://google.com"
+        },
+      ]
     }
 
   ```
